Support constrained and cancelable jobs in the system job scheduler